--- a/config.json
+++ b/config.json
@@ -2,5 +2,5 @@
     "title": "MNGO Short Link",
     "gtag": "G-XVRMMYBGGP",
     "root": "https://finmango.org",
-    "links": "https://mngo.org/links.csv"
+    "links": "https://docs.google.com/spreadsheets/d/e/2PACX-1vSkc515CXkML0Katly2_2tUqM3hZ-2oqS_kZ91Bzjg_uTH-FzbGtO0ODvOQ7HygQvYKh-umCmseHy7Y/pub?gid=0&single=true&output=csv"
 }
